--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-    height: 320px;
+    height: 300px;
     border-bottom: 2px solid #aaa;
     background-color: rgb(200, 200, 255);
     padding: 64px 16px 16px;
@@ -51,13 +51,12 @@ h1 {
 header p {
     font-style: 8px;
     line-height: 1;
-    padding: 0 0 8px;
+    padding: 0;
 }
 
 #pi1 {
-    border-radius: 50%;
-    top: 64px;
-    left: calc( ( 100% - 160px) / 2 );}
+    border-radius: 80px;
+    }
 
 
 .runnning {
@@ -66,11 +65,12 @@ header p {
     height: 152px;
     position: absolute;
     top: 64px;
-    left: calc( ( 100% - 160px) / 2 );
+    left: calc( 50% - 80px );
     border-radius: 50%;
     border: 4px solid rgb(200, 200, 255);
-    border-top: 4px solid #999;
-    /* border-bottom: 4px solid rgb(200, 200, 255);
+    /* border: 4px solid rgb(200, 200, 255); */
+    /* border-top: 4px solid #999;
+    border-bottom: 4px solid rgb(200, 200, 255);
     border-left: 4px solid rgb(200, 200, 255);
     border-right: 4px solid rgb(200, 200, 255); */
     animation: spin 2023ms infinite forwards;}
